# swagger.yaml
@@ -589,6 +589,7 @@ paths:
     get:
       summary: Lists of all orders
       tags: [Orders]
+      
       responses:
         "200":
           description: The list of orders.
@@ -609,6 +610,94 @@ paths:
       responses:
         '201':
           description: Created
+
+  /orders/{orderId}:
+    get:
+      summary: get single order
+      tags: [Orders]
+      parameters:
+        - name: orderId
+          in: path
+          required: true
+          description: Autogenerated orderId by MongoDB
+          schema:
+            type : string
+      responses:
+        "200":
+          description: single order.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Orders'
+
+    delete:
+      summary: Deletes a particular order.
+      tags: [Orders]
+      parameters:
+        - name: orderId
+          in: path
+          required: true
+          description: Auto generated orderId by Mongodb
+          schema:
+            type : string
+      responses:
+        '200':
+          description: Deleted user.
+        '404':
+          description : orderId not found            
+
+
+
+  /orders/{orderId}/{itemId}:
+    get:
+      summary: get single item in placed order
+      tags: [Orders]
+      parameters:
+        - name: orderId
+          in: path
+          required: true
+          description: Autogenerated orderId by MongoDB
+          schema:
+            type : string
+        - name: itemId
+          in: path
+          required: true
+          description: Autogenerated itemId by MongoDB
+          schema:
+            type : string
+
+      responses:
+        "200":
+          description: single order.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Orders'
+
+    delete:
+      summary: Deletes a particular item of an order.
+      tags: [Orders]
+      parameters:
+        - name: orderId
+          in: path
+          required: true
+          description: Autogenerated orderId by MongoDB
+          schema:
+            type : string
+        - name: itemId
+          in: path
+          required: true
+          description: Autogenerated itemId by MongoDB
+          schema:
+            type : string
+      responses:
+        '200':
+          description: Deleted review of a magazine.
+        '404': 
+          description: Magazine or review not found.
+                    
+
+
   
 components:
   schemas:
